// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DownloadAndOSSelection aarch64-openshift-install renders correctly 1`] = `
<Fragment>
  <Grid
    className="os-based-download"
    hasGutter={true}
  >
    <GridItem
      md={3}
    >
      <FormSelect
        aria-label="Select OS dropdown"
        className=""
        isDisabled={false}
        isIconSprite={false}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="linux"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select OS"
          value="select"
        />
        <FormSelectOption
          key="linux"
          label="Linux"
          value="linux"
        />
        <FormSelectOption
          key="mac"
          label="MacOS"
          value="mac"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={4}
    >
      <FormSelect
        aria-label="Select architecture dropdown"
        className=""
        isDisabled={false}
        isIconSprite={false}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="x86"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select architecture"
          value="select"
        />
        <FormSelectOption
          key="x86"
          label="x86_64"
          value="x86"
        />
        <FormSelectOption
          key="arm"
          label="aarch64"
          value="arm"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={5}
    >
      <DownloadButton
        auths={
          Object {
            "foo": "bar",
          }
        }
        tool="aarch64-openshift-install"
        url="https://mirror.openshift.com/pub/openshift-v4/aarch64/clients/ocp/stable/openshift-install-linux-amd64.tar.gz"
      />
    </GridItem>
  </Grid>
</Fragment>
`;

exports[`DownloadAndOSSelection crc renders correctly 1`] = `
<Fragment>
  <Grid
    className="os-based-download"
    hasGutter={true}
  >
    <GridItem
      md={3}
    >
      <FormSelect
        aria-label="Select OS dropdown"
        className=""
        isDisabled={false}
        isIconSprite={false}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="linux"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select OS"
          value="select"
        />
        <FormSelectOption
          key="linux"
          label="Linux"
          value="linux"
        />
        <FormSelectOption
          key="mac"
          label="MacOS"
          value="mac"
        />
        <FormSelectOption
          key="windows"
          label="Windows"
          value="windows"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={4}
    >
      <FormSelect
        aria-label="Select architecture dropdown"
        className=""
        isDisabled={true}
        isIconSprite={false}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="x86"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select architecture"
          value="select"
        />
        <FormSelectOption
          key="x86"
          label="x86_64"
          value="x86"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={5}
    >
      <DownloadButton
        auths={
          Object {
            "foo": "bar",
          }
        }
        tool="crc"
        url="https://developers.redhat.com/content-gateway/rest/mirror/pub/openshift-v4/clients/crc/latest/crc-linux-amd64.tar.xz"
      />
    </GridItem>
  </Grid>
</Fragment>
`;

exports[`DownloadAndOSSelection multi-openshift-install renders correctly 1`] = `
<Fragment>
  <Grid
    className="os-based-download"
    hasGutter={true}
  >
    <GridItem
      md={3}
    >
      <FormSelect
        aria-label="Select OS dropdown"
        className=""
        isDisabled={false}
        isIconSprite={false}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="linux"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select OS"
          value="select"
        />
        <FormSelectOption
          key="linux"
          label="Linux"
          value="linux"
        />
        <FormSelectOption
          key="mac"
          label="MacOS"
          value="mac"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={4}
    >
      <FormSelect
        aria-label="Select architecture dropdown"
        className=""
        isDisabled={false}
        isIconSprite={false}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="x86"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select architecture"
          value="select"
        />
        <FormSelectOption
          key="x86"
          label="x86_64"
          value="x86"
        />
        <FormSelectOption
          key="arm"
          label="aarch64"
          value="arm"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={5}
    >
      <DownloadButton
        auths={
          Object {
            "foo": "bar",
          }
        }
        tool="multi-openshift-install"
        url="https://mirror.openshift.com/pub/openshift-v4/multi/clients/ocp/latest/amd64/openshift-install-linux.tar.gz"
      />
    </GridItem>
  </Grid>
</Fragment>
`;

exports[`DownloadAndOSSelection oc renders correctly 1`] = `
<Fragment>
  <Grid
    className="os-based-download"
    hasGutter={true}
  >
    <GridItem
      md={3}
    >
      <FormSelect
        aria-label="Select OS dropdown"
        className=""
        isDisabled={false}
        isIconSprite={false}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="linux"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select OS"
          value="select"
        />
        <FormSelectOption
          key="linux"
          label="Linux"
          value="linux"
        />
        <FormSelectOption
          key="mac"
          label="MacOS"
          value="mac"
        />
        <FormSelectOption
          key="windows"
          label="Windows"
          value="windows"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={4}
    >
      <FormSelect
        aria-label="Select architecture dropdown"
        className=""
        isDisabled={false}
        isIconSprite={false}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="x86"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select architecture"
          value="select"
        />
        <FormSelectOption
          key="x86"
          label="x86_64"
          value="x86"
        />
        <FormSelectOption
          key="arm"
          label="aarch64"
          value="arm"
        />
        <FormSelectOption
          key="ppc"
          label="ppc64le"
          value="ppc"
        />
        <FormSelectOption
          key="s390x"
          label="s390x"
          value="s390x"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={5}
    >
      <DownloadButton
        auths={
          Object {
            "foo": "bar",
          }
        }
        tool="oc"
        url="https://mirror.openshift.com/pub/openshift-v4/x86_64/clients/ocp/stable/openshift-client-linux.tar.gz"
      />
    </GridItem>
  </Grid>
</Fragment>
`;

exports[`DownloadAndOSSelection ocm renders correctly 1`] = `
<Fragment>
  <Grid
    className="os-based-download"
    hasGutter={true}
  >
    <GridItem
      md={3}
    >
      <FormSelect
        aria-label="Select OS dropdown"
        className=""
        isDisabled={false}
        isIconSprite={false}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="linux"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select OS"
          value="select"
        />
        <FormSelectOption
          key="linux"
          label="Linux"
          value="linux"
        />
        <FormSelectOption
          key="mac"
          label="MacOS"
          value="mac"
        />
        <FormSelectOption
          key="windows"
          label="Windows"
          value="windows"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={4}
    >
      <FormSelect
        aria-label="Select architecture dropdown"
        className=""
        isDisabled={false}
        isIconSprite={false}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="x86"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select architecture"
          value="select"
        />
        <FormSelectOption
          key="x86"
          label="x86_64"
          value="x86"
        />
        <FormSelectOption
          key="arm"
          label="aarch64"
          value="arm"
        />
        <FormSelectOption
          key="ppc"
          label="ppc64le"
          value="ppc"
        />
        <FormSelectOption
          key="s390x"
          label="s390x"
          value="s390x"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={5}
    >
      <DownloadButton
        auths={
          Object {
            "foo": "bar",
          }
        }
        tool="ocm"
        url="https://github.com/openshift-online/ocm-cli/releases/download/v0.1.60/ocm-linux-amd64"
      />
    </GridItem>
  </Grid>
</Fragment>
`;

exports[`DownloadAndOSSelection ppc64le-openshift-install renders correctly 1`] = `
<Fragment>
  <Grid
    className="os-based-download"
    hasGutter={true}
  >
    <GridItem
      md={3}
    >
      <FormSelect
        aria-label="Select OS dropdown"
        className=""
        isDisabled={false}
        isIconSprite={false}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="linux"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select OS"
          value="select"
        />
        <FormSelectOption
          key="linux"
          label="Linux"
          value="linux"
        />
        <FormSelectOption
          key="mac"
          label="MacOS"
          value="mac"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={4}
    >
      <FormSelect
        aria-label="Select architecture dropdown"
        className=""
        isDisabled={false}
        isIconSprite={false}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="x86"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select architecture"
          value="select"
        />
        <FormSelectOption
          key="x86"
          label="x86_64"
          value="x86"
        />
        <FormSelectOption
          key="ppc"
          label="ppc64le"
          value="ppc"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={5}
    >
      <DownloadButton
        auths={
          Object {
            "foo": "bar",
          }
        }
        tool="ppc64le-openshift-install"
        url="https://mirror.openshift.com/pub/openshift-v4/ppc64le/clients/ocp/stable/openshift-install-linux-amd64.tar.gz"
      />
    </GridItem>
  </Grid>
</Fragment>
`;

exports[`DownloadAndOSSelection rosa renders correctly 1`] = `
<Fragment>
  <Grid
    className="os-based-download"
    hasGutter={true}
  >
    <GridItem
      md={3}
    >
      <FormSelect
        aria-label="Select OS dropdown"
        className=""
        isDisabled={false}
        isIconSprite={false}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="linux"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select OS"
          value="select"
        />
        <FormSelectOption
          key="linux"
          label="Linux"
          value="linux"
        />
        <FormSelectOption
          key="mac"
          label="MacOS"
          value="mac"
        />
        <FormSelectOption
          key="windows"
          label="Windows"
          value="windows"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={4}
    >
      <FormSelect
        aria-label="Select architecture dropdown"
        className=""
        isDisabled={true}
        isIconSprite={false}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="x86"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select architecture"
          value="select"
        />
        <FormSelectOption
          key="x86"
          label="x86_64"
          value="x86"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={5}
    >
      <DownloadButton
        auths={
          Object {
            "foo": "bar",
          }
        }
        tool="rosa"
        url="https://mirror.openshift.com/pub/openshift-v4/clients/rosa/latest/rosa-linux.tar.gz"
      />
    </GridItem>
  </Grid>
</Fragment>
`;

exports[`DownloadAndOSSelection s390x-openshift-install renders correctly 1`] = `
<Fragment>
  <Grid
    className="os-based-download"
    hasGutter={true}
  >
    <GridItem
      md={3}
    >
      <FormSelect
        aria-label="Select OS dropdown"
        className=""
        isDisabled={false}
        isIconSprite={false}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="linux"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select OS"
          value="select"
        />
        <FormSelectOption
          key="linux"
          label="Linux"
          value="linux"
        />
        <FormSelectOption
          key="mac"
          label="MacOS"
          value="mac"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={4}
    >
      <FormSelect
        aria-label="Select architecture dropdown"
        className=""
        isDisabled={false}
        isIconSprite={false}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="x86"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select architecture"
          value="select"
        />
        <FormSelectOption
          key="x86"
          label="x86_64"
          value="x86"
        />
        <FormSelectOption
          key="s390x"
          label="s390x"
          value="s390x"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={5}
    >
      <DownloadButton
        auths={
          Object {
            "foo": "bar",
          }
        }
        tool="s390x-openshift-install"
        url="https://mirror.openshift.com/pub/openshift-v4/s390x/clients/ocp/stable/openshift-install-linux-amd64.tar.gz"
      />
    </GridItem>
  </Grid>
</Fragment>
`;

exports[`DownloadAndOSSelection with error should render 1`] = `
<Fragment>
  <Grid
    className="os-based-download"
    hasGutter={true}
  >
    <GridItem
      md={3}
    >
      <FormSelect
        aria-label="Select OS dropdown"
        className=""
        isDisabled={false}
        isIconSprite={false}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="linux"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select OS"
          value="select"
        />
        <FormSelectOption
          key="linux"
          label="Linux"
          value="linux"
        />
        <FormSelectOption
          key="mac"
          label="MacOS"
          value="mac"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={4}
    >
      <FormSelect
        aria-label="Select architecture dropdown"
        className=""
        isDisabled={true}
        isIconSprite={false}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="x86"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select architecture"
          value="select"
        />
        <FormSelectOption
          key="x86"
          label="x86_64"
          value="x86"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={5}
    >
      <DownloadButton
        error="my error"
        tool="x86_64-openshift-install"
        url="https://mirror.openshift.com/pub/openshift-v4/x86_64/clients/ocp/stable/openshift-install-linux.tar.gz"
      />
    </GridItem>
  </Grid>
</Fragment>
`;

exports[`DownloadAndOSSelection x86_64-openshift-install renders correctly 1`] = `
<Fragment>
  <Grid
    className="os-based-download"
    hasGutter={true}
  >
    <GridItem
      md={3}
    >
      <FormSelect
        aria-label="Select OS dropdown"
        className=""
        isDisabled={false}
        isIconSprite={false}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="linux"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select OS"
          value="select"
        />
        <FormSelectOption
          key="linux"
          label="Linux"
          value="linux"
        />
        <FormSelectOption
          key="mac"
          label="MacOS"
          value="mac"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={4}
    >
      <FormSelect
        aria-label="Select architecture dropdown"
        className=""
        isDisabled={true}
        isIconSprite={false}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="x86"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select architecture"
          value="select"
        />
        <FormSelectOption
          key="x86"
          label="x86_64"
          value="x86"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={5}
    >
      <DownloadButton
        auths={
          Object {
            "foo": "bar",
          }
        }
        tool="x86_64-openshift-install"
        url="https://mirror.openshift.com/pub/openshift-v4/x86_64/clients/ocp/stable/openshift-install-linux.tar.gz"
      />
    </GridItem>
  </Grid>
</Fragment>
`;
